Fixed error message spaces and alignment

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -681,3 +681,7 @@ label input {
     float: left;
     border: white;
 }
+
+.check-remove {
+    margin-left: auto;
+}
